# gmock_demo

./: CMakeLists.txt  README.md
include/: calculator.hpp  client.hpp
src/: CMakeLists.txt  calculator.cpp  main.cpp
test/: CMakeLists.txt  test_calculator.cpp  test_calculator.hpp  test_client.cpp  test_client.hpp
